@@ -48,6 +48,7 @@ Changes in current version:
  o simplify evbuffer by removing orig_buffer
  o do not insert event into list when evsel->add fails
  o add support for PUT/DELETE requests; from Josh Rotenberg
+ o introduce evhttp_accept_socket() to accept from an already created socket
 
 
 Changes in 1.4.0:
